# conversation-toolkit

./: .coverage  CHARTER.md  DOCKSIDE-EXAM.md  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  test.yml  validate.yml
conversation_toolkit/: __init__.py  context.py  conversation.py  history.py  templates.py
conversation_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_context.py  test_conversation.py  test_history.py  test_templates.py
